--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="/guitar.jpg" alt="Guitar" width=255px height=175px>
     <figcaption>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGuitar</figcaption>
   </figure>
-  
+  <p>Guitar is a 6-stringed musical instrument.</p>
   <form action="">
     <table>
       <tr>
