--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
   <h1>Registration form for Guitar classes at <br><u><acronym title="Nirali D Bafna">NDB</acronym> Institute for Music</u></h1>
-
+  
   <figure>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <img src="/guitar.jpg" alt="Guitar" width=255px height=175px>
-    <figcaption>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGuitar</figcaption>
+    <figcaption>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGuitar</figcaption>
   </figure>
   <p>Guitar is a 6-stringed musical instrument.</p>
   <form action="">
@@ -118,12 +119,22 @@
         </td>
         
       </tr>
-
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr>
+        <td>Upload File: </td>
+        <td><input type="file" name="f_file" required></td>
+      </tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
       <tr>
         <td></td>
         <td><input type="submit"></td>
       </tr>
     </table>
+
   </form>
 </body>
 </html>
