--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration Form</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1>Registration form for Guitar classes at <br><u><acronym title="Nirali D Bafna">NDB</acronym> Institute for Music</u></h1>
+  <div class="whole">
+    <div class="heading">
+      <h1>&nbsp;&nbsp;&nbsp;&nbsp;Registration form for Guitar classes at <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u><acronym title="Nirali D Bafna">NDB</acronym> Institute for Music</u></h1>
+    </div>
   
-  <figure>
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    <img src="/guitar.jpg" alt="Guitar" width=255px height=175px>
-    <figcaption>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGuitar</figcaption>
-  </figure>
-  <p>Guitar is a 6-stringed musical instrument.</p>
-  <form action="">
+    <div class="image">
+      <figure>
+        
+        <img class="img1" src="/guitar.jpg" alt="Guitar" width=255px height=175px>
+        <div class="imgcaption">
+          <figcaption>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGuitar</figcaption>
+        </div>
+      </figure>
+    </div>
+    <br><br>
+    <div class="form1">
+      <form action="">
     <table>
       <tr>
         <td>Name: </td>
@@ -136,5 +145,7 @@
     </table>
 
   </form>
+    </div>
+  </div>
 </body>
 </html>
