--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </figure>
     </div>
     <br><br>
+    <div class="circle"></div>
     <div class="form1">
       <form action="">
     <table>
